# CascadeS2S

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  requirements.txt
app/: main.py
app/transcribe/: model.py
llm-worker/: Dockerfile  logger.py  requirements.txt  worker.py
stt-worker/: Dockerfile  requirements.txt  worker.py
stt-worker/ml_service/: model.py
tts-worker/: Dockerfile  requirements.txt  worker.py
worker/: worker.py
