[project]
dependencies = [
    "fastapi[all]>=0.116.1",
    "google-genai>=1.31.0",
    "openai-whisper>=20250625",
    "redis>=6.4.0",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
]
description = "Add your description here"
name = "speech2text"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [
  {index = "pytorch-cpu"},
]
torchvision = [
  {index = "pytorch-cpu"},
]
